src/styles/index.module.css
.container {
  padding: 0 10%;
}

.header {
  margin-top: 1em;
}

.main section {
  margin-top: 5em;
}

.aboveTheFold {
  margin-top: 0;
  display: flex;
  width: 100%;
}

.aboveTheFold aside {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.aboveTheFold figure {
  flex: 1;
}

.title {
  margin: 0;
}
.subtitle {
  font-size: 24px;
  margin: 0.5em 0;
}

.benefits > header {
  text-align: center;
}

.benefits > div {
  display: flex;
  text-align: center;
}

.benefits > div > div {
  flex: 1;
  padding: 0 1em;
}

.benefits p {
  margin: 1em;
}

.howItWorks > div {
  display: flex;
}

.howItWorks > div > div {
  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: center;
}

.howItWorks ol {
  padding-left: 1em;
}

.howItWorks ol > li {
  margin-bottom: 1em;
}

.howItWorks span {
  margin-left: 1em;
}

.howItWorks figure {
  flex: 1;
  width: 100%;
  height: 300px;
  border: 1px solid #5c677d;
  border-radius: 5px;
}

.footer {
  margin-top: 10em;
  background-color: #000;
  min-height: 250px;
  color: #fff;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.copyright {
  font-size: 0.8rem;
  text-align: center;
  justify-content: flex-end;
  margin-bottom: 2em;
}

